migrate to iTable. align colors. add code cell headings. add binder launch

--- a/01_SCRE_DE_Textbook.ipynb
+++ b/01_SCRE_DE_Textbook.ipynb
@@ -3,11 +3,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/01_SCRE_DE_Textbook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/01_SCRE_DE_Textbook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+        " [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/tsherburne/de-textbook/HEAD?labpath=01_SCRE_DE_Textbook.ipynb)"
       ]
     },
     {
@@ -61,7 +62,7 @@
       },
       "source": [
         "## Top-Level MBSE Meta-Model\n",
-        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/meta-model-foundation.png\" height=\"300\" />\n",
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/meta-model-foundation.png\" width=\"500\" />\n",
         "\n"
       ]
     },
@@ -73,7 +74,7 @@
       "source": [
         "<a name=\"essential-mbse\"></a>\n",
         "## Essential MBSE Meta-Model\n",
-        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mbse-essential.png\" height=\"400\" />"
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mbse-essential.png\" width=\"500\" />"
       ]
     },
     {
@@ -100,13 +101,13 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Digital Engineering MBSE Meta-Model Extensions\n",
-        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/digital-engineering-meta-model-extensions.png\" height=\"600\" />"
-      ],
       "metadata": {
         "id": "Ipo1gk0rNEWr"
-      }
+      },
+      "source": [
+        "## Digital Engineering MBSE Meta-Model Extensions\n",
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/digital-engineering-meta-model-extensions.png\" width=\"700\" />"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -127,7 +128,7 @@
         "<a name=\"resilience-concept\"></a>\n",
         "## Resilience Concept\n",
         "\n",
-        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/resilience-concept.png\" height=\"300\" />\n",
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/resilience-concept.png\" wdith=\"400\" />\n",
         "\n",
         "* A ***Resilience Mode*** is a distinct and separate method of operation of a component, device, or system based upon a diverse redundancy or other design pattern.\n",
         "* A ***Sentinel*** is a pattern responsible for monitoring and reconfiguration of a system using available Resilience Modes. The Sentinel functions are expected to be far more secure than the system being addressed for resilience.\n",
@@ -144,7 +145,7 @@
         "## STPA-Sec Methodology Overview\n",
         "> [Systems Theoretic Process Analysis (STPA) Guidebook](https://psas.scripts.mit.edu/home/get_file.php?name=STPA_handbook.pdf) (page 14)\n",
         "\n",
-        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/stpa-method-overview.png\" height=\"400\" />\n",
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/stpa-method-overview.png\" width=\"500\" />\n",
         "\n",
         "1. Defining the purpose of the analysis is the first step with any analysis method. What kinds of ***losses***\n",
         "will the analysis aim to prevent? Will STPA be applied only to traditional safety goals like preventing loss\n",
@@ -171,7 +172,7 @@
       "source": [
         "## Mission Aware (MA) MBSE Incredients\n",
         "\n",
-        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-aware-mbse-incredients.png\" height=\"200\" />\n",
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-aware-mbse-incredients.png\" width=\"600\" />\n",
         "\n",
         "* [Essential MBSE](#essential-mbse)\n",
         "* [STPA-Sec](#stpa-methodology)\n",
@@ -194,7 +195,7 @@
       "source": [
         "## Top-Level MA MBSE Meta-Model\n",
         "\n",
-        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/ma-meta-model-foundation.png\" height=\"400\" />"
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/ma-meta-model-foundation.png\" width=\"500\" />"
       ]
     },
     {
@@ -205,7 +206,7 @@
       "source": [
         "## Detailed MA MBSE Meta-Model\n",
         "\n",
-        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/ma-meta-model-detail.png\" height=\"600\" />"
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/ma-meta-model-detail.png\" width=\"600\" />"
       ]
     },
     {
@@ -248,7 +249,7 @@
         "* Blue Team ‐ The blue team is composed of operationally‐oriented members with experience using similar systems. The blue team is responsible for providing consequences and risks to the CSRM process.\n",
         "* Red Team ‐ The red team is composed of cyber security experts and cyber attack experts who will provide the likelihood of different attacks given the current system design and resilient solutions.\n",
         "* System Test Team ‐ The Test team is responsible for ensuring the current system design, including resilience modes of operation, can be adequately tested.\n",
-        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/csrm-methodology.png\" height=\"300\" />\n",
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/csrm-methodology.png\" width=\"700\" />\n",
         "\n",
         "Each block in the iterative CSRM process diagram is color coded to reflect the team responsible for the step. The 6 steps are outlined as follows:\n",
         "\n",
@@ -276,7 +277,7 @@
       "source": [
         "## Framework for Operational Resilience in Engineering and System Test (FOREST)\n",
         "\n",
-        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/forest-methodology.png\" height=\"350\" />\n",
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/forest-methodology.png\" width=\"400\" />\n",
         "\n",
         "### Testable Requirements Elicitation Elements (TREE)\n",
         "\n",
@@ -314,7 +315,7 @@
         "\n",
         "Silverfish is a rapidly deployable set of fifty (50) individual ground-based weapon platforms (referred to as obstacles) controlled by a single operator. The purpose of the system is to deter and prevent adversaries from trespassing into a designated geographic area that is located near a strategically sensitive location. The system includes a variety of sensors to locate and classify potential trespassers as either personnel or vehicles. An internal wireless communication system is used to support communication between the sensors and the operator, and also supports fire control communications between the operator and the obstacles. The sensors include obstacle-based seismic and acoustic sensors, infrared sensors and an unmanned aerial vehicle-based surveillance system to provide warning of potential adversaries approaching the protected area. The operator is located in a vehicle, and operates within visual range of the protected area. The operator is in communication with a higher-level command and control (C2) system for exchange of doctrinal-related and situation awareness information. A more detailed functional description of the system is presented below.\n",
         "\n",
-        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/silverfish-overview.png\" height=\"500\" />\n",
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/silverfish-overview.png\" width=\"700\" />\n",
         "\n",
         "* Purpose: Deter and prevent, when and where necessary, via the use of rapidly deployable obstacles, adversarial tracked vehicles (assumed maximum speed - 10mph) or individuals from trespassing into geographic areas that are close to strategically sensitive locations. \n",
         "* Prohibited Area: ~100 acres of open field space (100 acres, approximately 0.16 square miles = 0.4 mile x 0.4 mile area). At maximum speed a vehicle would take about 3 minutes to cross the prohibited area. \n",
@@ -334,27 +335,30 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Pipeline Case-Study Conops"
-      ],
       "metadata": {
         "id": "S26Hf0TBOn92"
-      }
+      },
+      "source": [
+        "# Pipeline Case-Study Conops"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "9jBXI3ELOMtI"
+      },
       "source": [
         "\n",
         "[Overview Description](https://en.wikipedia.org/wiki/Pipeline_transport#Oil_and_natural_gas)\n",
         "\n",
-        "> <img src=\"https://upload.wikimedia.org/wikipedia/en/4/46/Pipeline-Scada.jpg\" height=\"400\"/>"
-      ],
-      "metadata": {
-        "id": "9jBXI3ELOMtI"
-      }
+        "> <img src=\"https://upload.wikimedia.org/wikipedia/en/4/46/Pipeline-Scada.jpg\" width=\"700\"/>"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "04sTbg-sOXjp"
+      },
       "source": [
         "* Field devices are instrumentation, data gathering units and communication systems. The field instrumentation includes ***flow***, ***pressure***, and ***temperature*** gauges/transmitters, and other devices to measure the relevant data required. These instruments are installed along the pipeline on some specific locations, such as injection or delivery stations, pump stations (liquid pipelines) or compressor stations (gas pipelines), and block valve stations.\n",
         "\n",
@@ -372,10 +376,7 @@
         "| Outlet Station | Known also as \"outlet\" stations or terminals, this is where the product will be distributed to the consumer. <br> It could be a tank terminal for liquid pipelines or a connection to a distribution network for gas pipelines.  | \n",
         "| Pump Station |  Pumps for liquid pipelines and compressors for gas pipelines, are located along the line to move the product through <br> the pipeline. The location of these stations is defined by the topography of the terrain, the type of product <br> being transported, or operational conditions of the network. | \n",
         "| Valve Station | These are the first line of protection for pipelines. With these valves the operator can isolate any segment of the line <br> for maintenance work or isolate a rupture or leak. Block valve stations are usually located every 20 to 30 miles, <br> depending on the type of pipeline. Even though it is not a design rule, it is a very usual practice in liquid pipelines. <br> The location of these stations depends exclusively on the nature of the product being transported, the trajectory <br> of the pipeline and/or the operational conditions of the line.  | "
-      ],
-      "metadata": {
-        "id": "04sTbg-sOXjp"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -385,7 +386,7 @@
       "source": [
         "# DE System-Engineering-V Chapter Links\n",
         "\n",
-        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/systems-engineering-v.png\" height=\"300\" />\n",
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/systems-engineering-v.png\" width=\"500\" />\n",
         "\n"
       ]
     },
@@ -413,11 +414,11 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
+      "include_colab_link": true,
       "name": "01_SCRE_DE_Textbook.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
