--- a/02_SCRE_System_Description.ipynb
+++ b/02_SCRE_System_Description.ipynb
@@ -7,7 +7,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/02_SCRE_System_Description.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/02_SCRE_System_Description.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a> [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/tsherburne/de-textbook/HEAD?labpath=02_SCRE_System_Description.ipynb)"
       ]
     },
     {
@@ -20,6 +20,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Download & Install Notebook Packages"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -29,10 +36,16 @@
       },
       "outputs": [],
       "source": [
-        "#@title Download & Install Notebook Packages\n",
         "%pip install -q manb\n",
         "import manb\n",
         "env = manb.Environment('https://genesys.mission-aware.net', '/api/v1/')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Cloudflare Tunnel Authentication"
       ]
     },
     {
@@ -44,11 +57,14 @@
       },
       "outputs": [],
       "source": [
-        "#@title Cloudflare Tunnel Authentication\n",
-        "try:\n",
-        "  env.Tunnel()\n",
-        "except NameError:\n",
-        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
+        "env.Tunnel()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## GENESYS Login & Project Selection"
       ]
     },
     {
@@ -61,11 +77,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title GENESYS Login & Project Selection\n",
-        "try:\n",
-        "  env.Login()\n",
-        "except NameError:\n",
-        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
+        "env.Login()"
       ]
     },
     {
@@ -78,6 +90,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Initialize System Description"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -86,11 +105,14 @@
       },
       "outputs": [],
       "source": [
-        "#@title Initialize System Description\n",
-        "try:\n",
-        "  sd = manb.SystemDescription(env)\n",
-        "except NameError:\n",
-        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
+        "sd = manb.SystemDescription(env)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Use Case Diagrams"
       ]
     },
     {
@@ -102,11 +124,14 @@
       },
       "outputs": [],
       "source": [
-        "#@title Use Case Diagrams\n",
-        "try:\n",
-        "  sd.UseCaseDiagrams()\n",
-        "except NameError:\n",
-        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
+        "sd.UseCaseDiagrams()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Use Case Table"
       ]
     },
     {
@@ -118,11 +143,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title Use Case Table\n",
-        "try:\n",
-        "  sd.UseCaseTable()\n",
-        "except NameError:\n",
-        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
+        "sd.UseCaseTable()"
       ]
     },
     {
@@ -142,15 +163,9 @@
         "\n",
         "### MBSE ***Control Structure*** Entities & Relationships\n",
         "\n",
-        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-aware-mbse-control-structure.png\" height=\"175\" />"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "MbKUUST13aMl"
-      },
-      "source": [
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-aware-mbse-control-structure.png\" width=\"500\" />\n",
+        "\n",
+        "\n",
         "----\n",
         "\n",
         "| Entity | Description |\n",
@@ -166,6 +181,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### System ***Context*** & ***Control Structure*** Diagram"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -174,11 +196,14 @@
       },
       "outputs": [],
       "source": [
-        "#@title System ***Context*** & ***Control Structure*** Diagram\n",
-        "try:\n",
-        "  sd.ControlStructureDiagram()\n",
-        "except NameError:\n",
-        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
+        "sd.ControlStructureDiagram()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### System ***Control Actions***"
       ]
     },
     {
@@ -190,11 +215,14 @@
       },
       "outputs": [],
       "source": [
-        "#@title System ***Control Actions***\n",
-        "try:\n",
-        "  sd.ControlActionTable()\n",
-        "except NameError:\n",
-        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
+        "sd.ControlActionTable()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Message Sequence Diagrams"
       ]
     },
     {
@@ -206,11 +234,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title Message Sequence Diagrams\n",
-        "try:\n",
-        "  sd.MSCDiagrams()\n",
-        "except NameError:\n",
-        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
+        "sd.MSCDiagrams()"
       ]
     }
   ],
