--- a/03_SCRE_Risk_Assessment.ipynb
+++ b/03_SCRE_Risk_Assessment.ipynb
@@ -7,7 +7,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/03_SCRE_Risk_Assessment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/03_SCRE_Risk_Assessment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a> [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/tsherburne/de-textbook/HEAD?labpath=03_SCRE_Risk_Assessment.ipynb)"
       ]
     },
     {
@@ -21,6 +21,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Download & Install Notebook Packages"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -30,11 +37,16 @@
       },
       "outputs": [],
       "source": [
-        "#@title Download & Install Notebook Packages\n",
-        "\n",
         "%pip install -q manb\n",
         "import manb\n",
         "env = manb.Environment('https://genesys.mission-aware.net', '/api/v1/')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Cloudflare Tunnel Authentication"
       ]
     },
     {
@@ -46,8 +58,14 @@
       },
       "outputs": [],
       "source": [
-        "#@title Cloudflare Tunnel Authentication\n",
         "env.Tunnel()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## GENESYS Login & Project Selection"
       ]
     },
     {
@@ -60,7 +78,6 @@
       },
       "outputs": [],
       "source": [
-        "#@title GENESYS Login & Project Selection\n",
         "env.Login()"
       ]
     },
@@ -83,9 +100,16 @@
         "## STPA Losses, Hazards, & Hazardous Control Actions\n",
         "\n",
         "--- \n",
-        "### MBSE ***Operational Risk Assessment*** Entities & Relationships\n",
+        "## MBSE ***Operational Risk Assessment*** Entities & Relationships\n",
         "\n",
-        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-aware-ma-mbse-risk-assesment.png\" height=\"200\" />"
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-aware-ma-mbse-risk-assesment.png\" width=\"500\" />"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Initialize Risk Assessment"
       ]
     },
     {
@@ -97,8 +121,18 @@
       },
       "outputs": [],
       "source": [
-        "#@title Initialize Risk Assessment\n",
         "ra = manb.RiskAssessment(env)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## System ***Losses***\n",
+        "Definition: A ***Loss*** involves something of value to stakeholders. \n",
+        "Losses may include a loss of human life or human injury, property damage, \n",
+        "environmental pollution, loss of mission, loss of reputation, loss or leak of \n",
+        "sensitive information, or any other loss that is unacceptable to the stakeholders.\n"
       ]
     },
     {
@@ -110,13 +144,17 @@
       },
       "outputs": [],
       "source": [
-        "#@title System ***Losses***\n",
-        "#@markdown Definition: A ***Loss*** involves something of value to stakeholders. \n",
-        "#@markdown Losses may include a loss of human life or human injury, property damage, \n",
-        "#@markdown environmental pollution, loss of mission, loss of reputation, loss or leak of \n",
-        "#@markdown sensitive information, or any other loss that is unacceptable to the stakeholders.\n",
-        "\n",
         "ra.LossTable()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## System Hazards\n",
+        "Definition: A ***Hazard*** is a system state or set of conditions \n",
+        "that, together with a particular set of worst-case environmental \n",
+        "conditions, will lead to a loss."
       ]
     },
     {
@@ -128,12 +166,22 @@
       },
       "outputs": [],
       "source": [
-        "#@title System Hazards\n",
-        "#@markdown Definition: A ***Hazard*** is a system state or set of conditions \n",
-        "#@markdown that, together with a particular set of worst-case environmental \n",
-        "#@markdown conditions, will lead to a loss.\n",
-        "\n",
         "ra.HazardTable()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## System Hazardous Control Actions\n",
+        "Definition: A ***Hazardous Control Action (HCA)*** is a control action that, \n",
+        "in a particular context and worst-case environment, will lead to a hazard.\n",
+        "\n",
+        "There are four ways ***(variation type)*** a control action can be hazardous:\n",
+        "1. Not providing the control action leads to a hazard.\n",
+        "2. Providing the control action leads to a hazard.\n",
+        "3. Providing a potentially safe control action but too early, too late, or in the wrong order\n",
+        "4. The control action lasts too long or is stopped too soon (for continuous control actions, not discrete ones)."
       ]
     },
     {
@@ -145,21 +193,19 @@
       },
       "outputs": [],
       "source": [
-        "#@title System Hazardous Control Actions\n",
-        "#@markdown Definition: A ***Hazardous Control Action (HCA)*** is a control action that, \n",
-        "#@markdown in a particular context and worst-case environment, will lead to a hazard.\n",
-        "#@markdown \n",
-        "#@markdown There are four ways ***(variation type)*** a control action can be hazardous:\n",
-        "#@markdown 1. Not providing the control action leads to a hazard.\n",
-        "#@markdown 2. Providing the control action leads to a hazard.\n",
-        "#@markdown 3. Providing a potentially safe control action but too early, too late, or in the wrong order\n",
-        "#@markdown 4. The control action lasts too long or is stopped too soon (for continuous control actions, not discrete ones).\n",
-        "#@markdown > To filter rows NOT containing \\<string>\n",
-        "#@markdown ```\n",
-        "#@markdown ^((?!<string>).)*$\n",
-        "#@markdown ```\n",
-        "\n",
         "ra.HazardousActionTable()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Control Action Analysis\n",
+        "\n",
+        "Although all four variation types should be considered, they may not all \n",
+        "be applicable in every case (see HCA.0 and 'justification'). It is also possible \n",
+        "to identify several HCAs for a single variation type.\n",
+        "In general, each CA / variation type may define 0 or more HCAs."
       ]
     },
     {
@@ -171,37 +217,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title Control Action Analysis\n",
-        "\n",
-        "#@markdown Although all four variation types should be considered, they may not all \n",
-        "#@markdown be applicable in every case (see HCA.0 and 'justification'). It is also possible \n",
-        "#@markdown to identify several HCAs for a single variation type.\n",
-        "#@markdown In general, each CA / variation type may define 0 or more HCAs.\n",
-        "\n",
         "ra.ControlActionAnalysisTable()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "dUqM80mny9lO"
-      },
-      "source": [
-        "# Exercises"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "7oHALC2Q9zJL"
-      },
-      "outputs": [],
-      "source": [
-        "#@title Risk Assessment Questions\n",
-        "ex = manb.Exercises(env, manb.Section.RISK_ASSESSMENT)\n",
-        "ex.Edit()"
       ]
     }
   ],
