--- a/05_SCRE_Resilience_Architecture.ipynb
+++ b/05_SCRE_Resilience_Architecture.ipynb
@@ -3,11 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/05_SCRE_Resilience_Architecture.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/05_SCRE_Resilience_Architecture.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a> [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/tsherburne/de-textbook/HEAD?labpath=05_SCRE_Resilience_Architecture.ipynb)"
       ]
     },
     {
@@ -37,8 +37,6 @@
       },
       "outputs": [],
       "source": [
-        "#@title\n",
-        "# Run Initialze Notebook\n",
         "%pip install -q manb\n",
         "import manb\n",
         "env = manb.Environment('https://genesys.mission-aware.net', '/api/v1/')"
@@ -62,12 +60,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title\n",
-        "# Run Cloudflare Tunnel Authentication\n",
-        "try:\n",
-        "  env.Tunnel()\n",
-        "except NameError:\n",
-        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
+        "env.Tunnel()"
       ]
     },
     {
@@ -88,12 +81,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title\n",
-        "# Run GENESYS Login & Project Selection\n",
-        "try:\n",
-        "  env.Login()\n",
-        "except NameError:\n",
-        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
+        "env.Login()"
       ]
     },
     {
@@ -123,12 +111,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title\n",
-        "# Initialize Resilience Architecture Analysis\n",
-        "try:  \n",
-        "  arch = manb.ResilienceArchitecture(env)\n",
-        "except NameError:\n",
-        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
+        "arch = manb.ResilienceArchitecture(env)"
       ]
     },
     {
@@ -148,7 +131,7 @@
       "source": [
         "### MBSE for Loss Scenario Elaboration\n",
         "\n",
-        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-aware-loss-scenario-elaboration.png\" height=\"350\" />\n"
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-aware-loss-scenario-elaboration.png\" width=\"600\" />\n"
       ]
     },
     {
@@ -172,12 +155,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title\n",
-        "# Generate Resilient Modes Table\n",
-        "try:  \n",
-        "  arch.ResilientModeTable()\n",
-        "except NameError:\n",
-        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
+        "arch.ResilientModeTable()"
       ]
     },
     {
@@ -198,12 +176,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title\n",
-        "# Generate Loss Scenario Elaboration Table\n",
-        "try:  \n",
-        "  arch.LossScenarioElaborationTable()\n",
-        "except NameError:\n",
-        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
+        "arch.LossScenarioElaborationTable()"
       ]
     },
     {
@@ -224,12 +197,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title\n",
-        "# Generate Loss Scenario Message Sequence Diagrams\n",
-        "try:\n",
-        "  arch.LossScenarioMSCDiagrams()\n",
-        "except NameError:\n",
-        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
+        "arch.LossScenarioMSCDiagrams()"
       ]
     },
     {
@@ -249,7 +217,7 @@
       "source": [
         "### MBSE for Requirements Elicitation\n",
         "\n",
-        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-aware-requirements-elicitation.png\" height=\"350\" />\n"
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-aware-requirements-elicitation.png\" width=\"500\" />\n"
       ]
     },
     {
@@ -270,23 +238,18 @@
       },
       "outputs": [],
       "source": [
-        "#@title\n",
-        "# Generate Loss Scenario / Remediation Elicted Requirements Table\n",
-        "try:  \n",
-        "  arch.ElicitedRequirementsTable()\n",
-        "except NameError:\n",
-        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
+        "arch.ElicitedRequirementsTable()"
       ]
     }
   ],
   "metadata": {
     "colab": {
       "collapsed_sections": [],
+      "include_colab_link": true,
       "name": "05_SCRE_Resilience_Architecture.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "interpreter": {
       "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
