--- a/05_SCRE_Resilience_Architecture.ipynb
+++ b/05_SCRE_Resilience_Architecture.ipynb
@@ -181,6 +181,22 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Resilience Architecture Block Diagrams"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "arch.ResilienceArchitecture()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "n0KOonqABTqQ"
       },
