elicited requirements with FOREST & CSRM

--- a/01_SCRE_DE_Textbook.ipynb
+++ b/01_SCRE_DE_Textbook.ipynb
@@ -7,8 +7,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/01_SCRE_DE_Textbook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
-        " [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/tsherburne/de-textbook/HEAD?labpath=01_SCRE_DE_Textbook.ipynb)"
+        "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/01_SCRE_DE_Textbook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -47,7 +46,7 @@
         "\n",
         "*   ***Entities*** correspond to nouns in English. Entities define objects and serve as the basic units in a meta-model (e.g., Component, Function, etc.) ​\n",
         "*   ***Relationships*** are similar to verbs. Each relationship has a definite subject and object (e.g. a Component performs a Function).​\n",
-        "*    Attributes further describe entities much like adjectives modify nouns. The attributes of an entity serve to define critical properties of entities. (e.g. Component entity includes number and type attributes).  \n",
+        "*    ***Attributes*** further describe entities much like adjectives modify nouns. The attributes of an entity serve to define critical properties of entities. (e.g. Component entity includes number and type attributes).  \n",
         "*   ***Attributed-Relationships*** (i.e., attributes on relationships) correspond to adverbs in English. The attributes of a relationship serve to define critical properties of the relationship. For instance, attributes of a consumes relationship would include the quantity being consumed. ​\n",
         "*   ***Structures*** provide specification of semantically explicit system control constructs (Concurrency, Iteration, Loop, Multiple Exit, Replication, Selection, and Sequence). Using this explicit notation, the behavior of the system can be validated and executed using a simulator. \n",
         "\n",
@@ -281,7 +280,6 @@
         "\n",
         "### Testable Requirements Elicitation Elements (TREE)\n",
         "\n",
-        "----\n",
         "\n",
         "| TREE    | Number | Description |\n",
         "| :---    | :---   | :----       | \n",
@@ -292,9 +290,48 @@
         "| Operational **Confidence** <br> in Executing Resilience <br> Solutions | T.5 | The framework calls for documentation of the basis for achieving high enough confidence and <br> the related test and evaluation methods.|\n",
         "| **Readiness** for Operational <br> Execution <br> (Real-time Mission  Context) | T.6 | The framework will expect explanation of the basis for the system design approach regarding test support <br>for addressing operator roles and anticipated performance.|\n",
         "| System Resilience <br> Decision & **Execution** | T.7 | The framework will look for the rationale for who decides on what, and the training and tech support required for decision-makers.|\n",
-        "| **Post-Event** and <br> Lifecycle Test Responses | T.8 | This portion of the framework addresses identification of information reporting and re-use of development test support <br> capabilities to address system re-testing regarding potential improvements based upon actual results derived from executing <br>resilience solutions in response to cyber-attacks.|\n",
+        "| **Post-Event** and <br> Lifecycle Test Responses | T.8 | This portion of the framework addresses identification of information reporting and re-use of development test support <br> capabilities to address system re-testing regarding potential improvements based upon actual results derived from executing <br>resilience solutions in response to cyber-attacks.|"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### CSRM with FOREST Overlay\n",
         "\n",
-        "---\n"
+        "The associated TREEs are connected to the relevant CSRM step and provide guidance for judging the completeness of the system description, from a resilience perspective, and for driving the iterative loops of CSRM.\n",
+        "\n",
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/csrm-methodology-forest.png\" width=\"800\" />\n",
+        "\n",
+        "The TREE connections are:\n",
+        "\n",
+        "*  During the cyber vulnerability assessment (Step 4) TREE.1 and TREE.2 ensure that appropriate interfaces and mechanisms are defined to enable ***Sensing*** and ***Isolation*** of each Loss Scenario.\n",
+        "* The *sufficient resilience* loop is driven by TREE.3 and TREE.4 that ensure each Loss Scenario has one or more Resilient Mode reconfiguration ***Options*** and that appropriate interfaces and mechanisms are defined to enable technical ***Evaluation*** of each Resilient Mode.\n",
+        "* The *acceptable risk* loop is driven by TREE.5 and TREE.6 that ensure appropriate interfaces and mechanisms are defined to enable operational judgement of ***Confidence*** and ***Readiness*** for usage of each Resilient Mode.\n",
+        "* The *acceptable test* loop is driven by TREE.7 that ensures all Loss Scenarios and Resilient Modes have appropriate Test Support interfaces and mechanisms to drive and measure ***Execution***.\n",
+        "* TREE.8 ensures that appropriate ***Post Event*** analysis mechanisms exist to adapt the Baseline System for new or refined Missions."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Cyber Survivability Attributes\n",
+        "\n",
+        " Cyber Survivability Attributes (CSA) is a [framework](https://www.itea.org/wp-content/uploads/2019/03/Pitcher-Steve.pdf) promulgated by the DoD Joint Staff that can be used to derive requirements in support of cyber survivability.  CSA's 7, 8, 9 & 10 relate closely to Cyber Resilience and TREE-based requirements will be elicted and traced to CSAs as part of the Resilience Architecture.\n",
+        "\n",
+        "| KPP    | CSA Number | Description |\n",
+        "| :---    | :---   | :----       | \n",
+        "| Prevent | CSA-01 | Control Access |\n",
+        "| | CSA-02 | Reduce System's Cyber Detectability |\n",
+        "| | CSA-03 | Secure Transmissions and Communications |\n",
+        "| | CSA-04 | Protect System's Information from Exploitation |\n",
+        "| | CSA-05 | Partition and Ensure Critical Functions at Mission Completion Performance Levels |\n",
+        "| | CSA-06 | Minimize and Harden Attack Surfaces |\n",
+        "| ***Mitigate*** | CSA-07 | Baseline and Monitor Systems and Detect Anomalies |\n",
+        "| | CSA-08 | Manage System Performance if Degraded by Cyber Events |\n",
+        "| ***Recover*** | CSA-09 | Recover System Capabilities |\n",
+        "| ***Adapt*** | CSA-10 | Actively Manage System's Configuration to Achieve and Maintain an Operationally Relevant Cyber Survivability Risk Posture (CSRP) |"
       ]
     },
     {
