--- a/03_SCRE_Risk_Assessment.ipynb
+++ b/03_SCRE_Risk_Assessment.ipynb
@@ -7,7 +7,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/03_SCRE_Risk_Assessment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a> [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/tsherburne/de-textbook/HEAD?labpath=03_SCRE_Risk_Assessment.ipynb)"
+        "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/03_SCRE_Risk_Assessment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
