--- a/05_SCRE_Resilience_Architecture.ipynb
+++ b/05_SCRE_Resilience_Architecture.ipynb
@@ -7,7 +7,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/05_SCRE_Resilience_Architecture.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a> [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/tsherburne/de-textbook/HEAD?labpath=05_SCRE_Resilience_Architecture.ipynb)"
+        "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/05_SCRE_Resilience_Architecture.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -238,11 +238,38 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Quality Attributes and Next-Level CSA Requirements within FOREST\n",
+        "\n",
+        "Each FOREST step is associated with the appropriate SE artifact, quality attributes and refined as a set of next-level CSA requirement templates.\n",
+        "\n",
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/ma-meta-model-foundation-forest.png\" width=\"700\" />"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### FOREST-based Elicited Requirement Templates"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "arch.RequirementTemplates()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "A8fsh2VsBTqR"
       },
       "source": [
-        "### Loss Scenario / Remediation Eliced Requirements Table"
+        "### Loss Scenario / Remediation Elicited Requirements Table"
       ]
     },
     {
